tests/snapshots/anm_compile__err_sprite_clash.snap
---
source: tests/anm_compile.rs
expression: "compile_fail_stderr(Game::Th12, file(\"th12-err-sprite-clash.anm.spec\"))"
---
error: name clash between sprites
   ┌─ tests/anm-compile/th12-err-sprite-clash.anm.spec:16:15
   │
 9 │     sprites: {my_sprite: {x: 1.0, y: 1.0, w: 111.0, h: 111.0, id: 0}},
   │               --------- definition with ID 0
   ·
16 │     sprites: {my_sprite: {x: 2.0, y: 2.0, w: 222.0, h: 220.0, id: 1}},
   │               ^^^^^^^^^ redefinition with ID 1


